# winzy-visual-notify

./: README.md  pyproject.toml
tests/: test_winzy_visual_notify.py
winzy_visual_notify/: __init__.py  pyside6_speech_bubble.py
