[project]
name = "winzy-visual-notify"
version = "0.0.2"
description = "Notify using visual artefacts like clippy and other things."
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "pyside6",
]


[tool.setuptools.package-data]
"*" = ["*.*"] 

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-visual-notify"
Changelog = "https://github.com/sukhbinder/winzy-visual-notify/releases"
Issues = "https://github.com/sukhbinder/winzy-visual-notify/issues"
CI = "https://github.com/sukhbinder/winzy-visual-notify/actions"

[project.entry-points."winzy.plugins"]
tell = "winzy_visual_notify:tell_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
